--- a/registry.html
+++ b/registry.html
@@ -50,7 +50,11 @@
       <div class="row">
         <div class="col-md-12">
           <h4 class="text-center">More info coming soon</h4>
-          <br>
+        </div>
+      </div>
+
+      <div class="row footer">
+        <div class="col-md-12">
           <p class="text-center">
             Redondo Beach, CA
             <br>
