--- a/travel-info.html
+++ b/travel-info.html
@@ -62,7 +62,11 @@
             To book, you can <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Grissom%20%26%20Liggitt%20Wedding%5ELAXTC%60GLWGLWA%60179.00%60USD%60false%603%609/24/16%609/26/16%609/2/16&app=resvlink&stop_mobi=yes" target="_blank">book your group rate online</a>,
             or call 1-800-228-9290 and be sure to mention the Grissom-Liggitt wedding.
           </p>
-          <br><br>
+        </div>
+      </div>
+
+      <div class="row footer">
+        <div class="col-md-12">
           <p class="text-center">
             Redondo Beach, CA
             <br>
