--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p>Everything you need to know about getting to the party.</p>
         </div>
         <div class="col-sm-3 story-grid">
-          <h4><a href="registry.html" target="_blank">Registry</a></h4>
+          <h4><a href="registry.html">Registry</a></h4>
           <p>Help us start our new home together.</p>
         </div>
         <div class="clearfix"></div>
