--- a/registry.html
+++ b/registry.html
@@ -48,8 +48,24 @@
     <div class="container">
       <h3>Registry</h3>
       <div class="row">
-        <div class="col-md-12">
-          <h4 class="text-center">More info coming soon</h4>
+        <div class="col-md-10 col-md-offset-1">
+          <p class="text-center">
+            As many of you may know, we have been on the road for the last year living out of suitcases.
+            <br>
+            We are very excited to settle down and build a new home together (from scratch).
+          </p>
+
+          <p class="text-center">
+            We have registered for many essentials at <a href=" https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=543388046&eventType=Wedding&pwsurl=" target="_blank">Bed Bath and Beyond</a>.
+            <br>
+            Thank you for contributing to our new life together!
+          </p>
+          <br>
+          <p class="text-center">
+            If you feel more inclined to contribute to an experience, we will be honeymooning in an exotic location (TBD).
+            <br>
+            You can be a part of it through our <a href="http://honeyfund.com/wedding/TheGriggitts" target="_blank">Honeyfund</a>.
+          </p>
         </div>
       </div>
 
