adding registry images

--- a/registry.html
+++ b/registry.html
@@ -56,11 +56,16 @@
           </p>
 
           <p class="text-center">
-            We have registered for many essentials at <a href=" https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=543388046&eventType=Wedding&pwsurl=" target="_blank">Bed Bath and Beyond</a>.
+            We have registered for many essentials at <a href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=543388046&eventType=Wedding&pwsurl=" target="_blank">Bed Bath and Beyond</a>.
             <br>
             Thank you for contributing to our new life together!
           </p>
-          <br>
+
+          <div class="row image-group">
+            <div class="col-xs-6"><a href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=543388046&eventType=Wedding&pwsurl=" target="_blank"><img src="images/honeymoon-registry.jpg" /></a></div>
+            <div class="col-xs-6"><a href="http://honeyfund.com/wedding/TheGriggitts" target="_blank"><img src="images/honeymoon-fund.jpg" /></a></div>
+          </div>
+
           <p class="text-center">
             If you feel more inclined to contribute to an experience, we will be honeymooning in an exotic location (TBD).
             <br>
