repositioning registry images

--- a/registry.html
+++ b/registry.html
@@ -49,6 +49,13 @@
       <h3>Registry</h3>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
+          <div class="row image-group">
+            <div class="col-xs-6"><a href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=543388046&eventType=Wedding&pwsurl=" target="_blank"><img src="images/honeymoon-registry.jpg" /></a></div>
+            <div class="col-xs-6"><a href="http://honeyfund.com/wedding/TheGriggitts" target="_blank"><img src="images/honeymoon-fund.jpg" /></a></div>
+          </div>
+        </div>
+
+        <div class="col-md-10 col-md-offset-1">
           <p class="text-center">
             As many of you may know, we have been on the road for the last year living out of suitcases.
             <br>
@@ -60,11 +67,6 @@
             <br>
             Thank you for contributing to our new life together!
           </p>
-
-          <div class="row image-group">
-            <div class="col-xs-6"><a href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=543388046&eventType=Wedding&pwsurl=" target="_blank"><img src="images/honeymoon-registry.jpg" /></a></div>
-            <div class="col-xs-6"><a href="http://honeyfund.com/wedding/TheGriggitts" target="_blank"><img src="images/honeymoon-fund.jpg" /></a></div>
-          </div>
 
           <p class="text-center">
             If you feel more inclined to contribute to an experience, we will be honeymooning in an exotic location (TBD).
