--- a/rsvp.html
+++ b/rsvp.html
@@ -89,7 +89,7 @@
           </form>
         </div>
 
-        <div class="col-md-6 col-md-offset-3 hidden" id="success">
+        <div class="col-md-6 col-md-offset-3 text-center hidden" id="success">
           <h4>Thanks, we've received your RSVP.
             <br><br>
             We're excited to celebrate with you!
@@ -97,7 +97,7 @@
           </h4>
           <button class="reset-form">RSVP for another guest</button>
         </div>
-        <div class="col-md-6 col-md-offset-3 hidden" id="regrets">
+        <div class="col-md-6 col-md-offset-3 text-center hidden" id="regrets">
           <h4>We're sorry you won't be there!
             <br><br>
             Thanks for letting us know.  We'll see you soon.
