JS rsvp readonly fields

--- a/our-story.html
+++ b/our-story.html
@@ -102,7 +102,7 @@
     </div>
   </div>
 
-  <div class="people-section">
+  <div id="wedding-party" class="people-section">
     <div class="container">
       <h3>Wedding Party</h3>
       <h4 class="cursive">Bridesmaids</h4>
