ID on wedding party

--- a/our-story.html
+++ b/our-story.html
@@ -102,9 +102,9 @@
     </div>
   </div>
 
-  <div id="wedding-party" class="people-section">
+  <div class="people-section">
     <div class="container">
-      <h3>Wedding Party</h3>
+      <h3 id="wedding-party">Wedding Party</h3>
       <h4 class="cursive">Bridesmaids</h4>
       <div class="row people-images" data-target="#bridesmaid">
         <div class="col-10">
