--- a/our-story.html
+++ b/our-story.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Twila and Clayton get Hitched</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
