--- a/rsvp.html
+++ b/rsvp.html
@@ -87,6 +87,8 @@
               <input id="submit" type="submit" value="Find My Invitation">
             </div>
           </form>
+
+          <p><br>P.S. If you experience ANY issues at all, please let <a href="mailto:claytonliggitt@gmail.com">claytonliggitt@gmail.com</a> know about it!</p>
         </div>
 
         <div class="col-md-6 col-md-offset-3 text-center hidden" id="success">
