--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <div class="banner-navigation">
       <div class="container">
         <div class="logo">
-          <a href="index.html"><h1>T&C<span> Wedding</span></h1></a>
+          <a href="/"><h1>T&C<span> Wedding</span></h1></a>
         </div>
         <span class="menu"></span>
         <div class="top-menu">
           <ul class="nav">
             <li class="hvr-sweep-to-bottom"><a href="photos.html">Photos</a></li>
-            <li class="hvr-sweep-to-bottom"><a href="rsvp.html">RSVP</a></li>
+            <li class="hvr-sweep-to-bottom"><a href="rsvp-form.html">RSVP</a></li>
           </ul>
           <div class="clearfix"></div>
         </div>
@@ -44,13 +44,16 @@
     </div>
     <div class="banner-title">
       <div class="banner-info">
-        <h3>Clayton <span>&</span> Twila</h3>
+        <h3>Clayton <span class="cursive">&</span> Twila</h3>
         <p>September 25th, 2016</p>
+        <a href="rsvp-form.html">
+          <span class="cursive">~</span><span class="banner-link">Respond to your invitation</span><span class="cursive">~</span>
+        </a>
       </div>
     </div>
   </div>
 
-  <div class="story-section">
+  <div class="story-section short">
     <div class="container">
       <div class="story-grids">
         <div class="col-sm-3 story-grid">
