--- a/travel-info.html
+++ b/travel-info.html
@@ -29,13 +29,13 @@
     <div class="banner-navigation">
       <div class="container">
         <div class="logo">
-          <a href="index.html"><h1>T&C<span> Wedding</span></h1></a>
+          <a href="/"><h1>T&C<span> Wedding</span></h1></a>
         </div>
         <span class="menu"></span>
         <div class="top-menu">
           <ul class="nav">
             <li class="hvr-sweep-to-bottom"><a href="photos.html">Photos</a></li>
-            <li class="hvr-sweep-to-bottom"><a href="rsvp.html">RSVP</a></li>
+            <li class="hvr-sweep-to-bottom"><a href="rsvp-form.html">RSVP</a></li>
           </ul>
           <div class="clearfix"></div>
         </div>
