--- a/the-big-event.html
+++ b/the-big-event.html
@@ -48,20 +48,46 @@
     <div class="container">
       <h3>The Big Event</h3>
       <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <h4>Location</h4>
+          <p class="text-center">
+            The Portofino Hotel
+            <br>260 Portofino Way, Redondo Beach, CA 90277
+          </p>
+
+          <div class="responsive-iframe">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26509.72589027641!2d-118.41497596172279!3d33.84544078066276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b35e3a794125%3A0x77b074083bf70e03!2s260+Portofino+Way%2C+Redondo+Beach%2C+CA+90277!5e0!3m2!1sen!2sus!4v1457662586100" width="960" height="320" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+
+          <h4>Attire</h4>
+          <p class="text-center">Formal.  We'll be looking our best, and nothing less!</p>
+
+          <h4>Arrival</h4>
+          <p class="text-center">The ceremony starts prompty at <strong>5pm</strong>. Please arrive no later than 4:45pm.</p>
+
+          <h4>Transportation</h4>
+          <p>
+            Valet parking is available for $12 per car; there are no self-parking options.
+            We encourage carpooling and using Uber or Lyft.  If you haven't used Uber or Lyft before, here are some promo codes for free rides:
+            <br><strong>Uber</strong>: 1l6z3
+            <br><strong>Lyft</strong>: TWILA4
+          </p>
+
+          <h4>Staying the night</h4>
+          <p>We have arranged for a guestroom block at the Marriott Residence Inn Redondo Beach at a discounted rate of $179/night.
+            To book, you can <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Grissom%20%26%20Liggitt%20Wedding%5ELAXTC%60GLWGLWA%60179.00%60USD%60false%603%609/24/16%609/26/16%609/2/16&app=resvlink&stop_mobi=yes" target="_blank">book your group rate online</a>,
+            or call 1-800-228-9290 and be sure to mention the Grissom-Liggitt wedding.
+          </p>
+        </div>
+      </div>
+
+      <div class="row footer">
         <div class="col-md-12">
           <p class="text-center">
             Redondo Beach, CA
             <br>
             September 25, 2016
           </p>
-          <p class="text-center">Attire: Formal</p>
-        </div>
-      </div>
-      <div class="row hide">
-        <div class="col-md-12">
-          <div class="responsive-iframe">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26509.72589027641!2d-118.41497596172279!3d33.84544078066276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b35e3a794125%3A0x77b074083bf70e03!2s260+Portofino+Way%2C+Redondo+Beach%2C+CA+90277!5e0!3m2!1sen!2sus!4v1457662586100" width="960" height="320" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
         </div>
       </div>
     </div>
