Improved rsvp form validation

--- a/rsvp-form.html
+++ b/rsvp-form.html
@@ -73,7 +73,7 @@
             </div>
             <div class="form-field step-3 hidden">
               <label for="rsvp_email">Your Email:</label>
-              <input type="text" name="rsvp[email]" id="rsvp_email"><br>
+              <input type="text" name="rsvp[email]" id="rsvp_email">
             </div>
             <div class="form-field step-3 hidden">
               <label for="rsvp_meal_choice">Your Meal choice:</label>
@@ -88,7 +88,7 @@
             </div>
           </form>
 
-          <p><br>P.S. If you experience ANY issues at all, please let <a href="mailto:claytonliggitt@gmail.com">claytonliggitt@gmail.com</a> know about it!</p>
+          <p><br><br>P.S. If you experience ANY issues at all, please let <a href="mailto:claytonliggitt@gmail.com">claytonliggitt@gmail.com</a> know about it!</p>
         </div>
 
         <div class="col-md-6 col-md-offset-3 text-center hidden" id="success">
