Adding 'click to choose'

--- a/rsvp-form.html
+++ b/rsvp-form.html
@@ -76,7 +76,7 @@
               <input type="text" name="rsvp[email]" id="rsvp_email">
             </div>
             <div class="form-field step-3 hidden">
-              <label for="rsvp_meal_choice">Your Meal choice:</label>
+              <label for="rsvp_meal_choice">Your Meal choice (click to choose):</label>
               <select name="rsvp[meal_choice]" id="rsvp_meal_choice">
                 <option value="tofu">Grilled Marinated Tofu, Roasted Sweet Potato Hash, Baby Bok Choy, Marcona Almonds, Buerre Noisette</option>
                 <option value="filet">Pan Seared 8oz Filet, Herb Roasted Fingerling Potatoes, Bernaise Sauce, Red Wine Demi Glace</option>
