Adding song request

--- a/rsvp-form.html
+++ b/rsvp-form.html
@@ -83,6 +83,10 @@
                 <option value="seabass">Pan Seared Pacific Sea Bass, Couscous with Roasted Artichokes, Cherry Tomatoes, Caper Buerre Blanc</option>
               </select>
             </div>
+            <div class="form-field step-3 hidden">
+              <label for="rsvp_song">What song do you promise to dance to:</label>
+              <input type="text" name="rsvp[song]" id="rsvp_song">
+            </div>
             <div class="form-action">
               <input id="submit" type="submit" value="Find My Invitation">
             </div>
