reorganizing big event page

--- a/the-big-event.html
+++ b/the-big-event.html
@@ -49,6 +49,9 @@
       <h3>The Big Event</h3>
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
+          <h4>Ceremony</h4>
+          <p class="text-center">The ceremony starts prompty at <strong>5pm</strong>. Please arrive no later than 4:45pm.</p>
+
           <h4>Location</h4>
           <p class="text-center">
             The Portofino Hotel
@@ -61,9 +64,6 @@
 
           <h4>Attire</h4>
           <p class="text-center">Formal.  We'll be looking our best, and nothing less!</p>
-
-          <h4>Arrival</h4>
-          <p class="text-center">The ceremony starts prompty at <strong>5pm</strong>. Please arrive no later than 4:45pm.</p>
 
           <h4>Transportation</h4>
           <p>
